# AndroidPackaging.cmake

./: CMakeLists.txt  CMakePresets.json  README.md
CMake/: AndroidPackaging.cmake
Examples/basic/: CMakeLists.txt  main.cpp
